--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"clean-webpack-plugin": "^3.0.0",
 		"html-webpack-plugin": "^4.5.0",
 		"mini-css-extract-plugin": "^1.2.1",
+		"phaser": "^3.24.1",
 		"webpack-merge": "^5.3.0"
 	}
 }
